Refactoring IMC Calculator

--- a/01  - IMC Calculator/index.html
+++ b/01  - IMC Calculator/index.html
@@ -21,7 +21,7 @@
   <body>
     <section class="container">
       <h1>Tabela IMC</h1>
-      <table class="table table-hover">
+      <table id="IMCTable" class="table table-hover">
         <thead>
           <tr class="table-active">
             <th scope="col">IMC</th>
@@ -72,7 +72,7 @@
       </form>
       <button type="submit" id="sendButton" class="btn btn-success">Enviar</button>
       <div id="resultField">
-        <h2 id="h2Element"></h2>
+        <h3 id="h2Element"></h2>
       </div>
     </section>
     <script src="./assets/js/main.js"></script>
